--- a/frontend/src/components/Messages/Messages.module.css
+++ b/frontend/src/components/Messages/Messages.module.css
@@ -93,7 +93,9 @@
     font-size: 0.9rem;
     line-height: 0.9rem;
     overflow-wrap: anywhere;
+    resize: none;
     width: 100%;
+    white-space: pre-wrap;
 }
 
 .Message_text_editable {
